
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/subwaybackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/digipassDesc"
        android:src="@drawable/digipass_logo" />

    <TextView
        android:id="@+id/passwordForgotText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passWordPass"
        android:layout_below="@+id/passWordPass"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/passwordForgotText"
        android:textColor="@color/Blue" />

    <TextView
        android:id="@+id/userNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userName"
        android:layout_below="@+id/imageView1"
        android:textSize="20sp"
        android:textColor="@color/Black"
        android:layout_marginTop="45dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/userNameText"
        android:layout_centerHorizontal="true"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@1234567890."
        android:background="@drawable/back"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passWordPass"
        android:layout_below="@+id/passwordForgotText"
        android:layout_marginTop="18dp"
        android:onClick="displayMenu"
        android:text="@string/sendLoginButton"
        android:textColor="@color/Blue" />

    <Button
        android:id="@+id/newUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loginButton"
        android:layout_alignBottom="@+id/loginButton"
        android:layout_toRightOf="@+id/loginButton"
        android:onClick="signInForm"
        android:text="@string/newUserButtonText"
        android:textColor="@color/Blue" />

    <EditText
        android:id="@+id/passWordPass"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/userName"
        android:layout_alignRight="@+id/userName"
        android:layout_below="@+id/userName"
        android:layout_marginTop="40dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@1234567890!#$%^*()_+=-`~?,:'{}"
        android:background="@drawable/back"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/passWordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passWordPass"
        android:layout_below="@+id/userName"
        android:layout_marginTop="15dp"
        android:text="@string/passWordText"
        android:textColor="@color/Black"
        android:textSize="20sp" />

</RelativeLayout>