<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/subwaybackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SwipeScreen" >

    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="550dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/back" >

        <ImageView
            android:id="@+id/digiPassSwipeScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/digipassDesc"
            android:src="@drawable/digipass_logo" />

        <ImageView
            android:id="@+id/swipeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/digiPassSwipeScreen"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:contentDescription="@string/swipeDesc"
            android:src="@drawable/swipe_text_view" />

        <ImageView
            android:id="@+id/swipe_nfc_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/swipeTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/swipePicture"
            android:src="@drawable/swipe_small_pic" />

        <ImageView
            android:id="@+id/digipass_slogan"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_below="@+id/swipe_nfc_pic"
            android:layout_marginTop="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/traveling_fun" />

    </RelativeLayout>

</RelativeLayout>